apps/web-editor/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: openeo-web-editor
    namespace: openeo
    labels:
        app: openeo-web-editor
spec:
    selector:
        app: openeo-web-editor
    ports:
        - port: 80
          targetPort: 80
